<resources>
    <string name="app_name">اسعار الدولار في سوريا</string>
    <string name="tab_text_1">العملات العالمية</string>
    <string name="tab_text_2">الليرة التركية</string>
    <string name="converer">محول العملات</string>
    <string name="report_problem">ابلاغ عن مشكلة</string>
    <string name="error_in_process_the_photo">Error happened in the processing the photo</string>
    <string name="error_in_input">Error in the input, try again</string>
    <string name="send_code_to_verify_phone">We will send a verify code for the phone number</string>
    <string name="image_required">Images is required</string>

    <string name="the_problem_youare_facing">المشكلة التي تواجهك</string>
    <string name="default_notification_channel_id">1</string>
    <string name="ok">OK</string>
    <string name="Update_Expectation">Update Expectation</string>
    <string name="no_connection">No internet connection</string>
    <string name="error">Error happened</string>
    <string name="field_required">Field required</string>
    <string name="choose_language" translatable="false">اختيار اللغة</string>
    <string name="language" translatable="false">Language</string>
    <string name="arabic" translatable="false">اللغة العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="problem">Report a problem</string>
    <string name="your_problem">Your problem</string>
    <string name="notifications">Notifications</string>
    <string name="sound_notifications">Sound of notifications</string>
    <string name="remove_ads">Remove ads</string>
    <string name="change_language">Change Language</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="contact_us">Contact us</string>
    <string name="privacy">Privacy policy</string>
    <string name="monthly_subscription">Monthly subscription</string>
    <string name="subscribe_now">Subscribe now</string>
    <string name="yearly_subscription">Yearly subscription</string>
    <string name="change_subscription">Change subscription</string>
    <string name="to_remove_ads">Subscribe to remove ads and get better performance</string>
    <string name="turkish_lira">Turkish lira</string>
    <string name="lebanon_lira">Lebanon lira</string>
    <string name="syrian_lira">Syrian Lira</string>
    <string name="syrian_lira_details">The Syrian pound against the dollar</string>
    <string name="formal_news">Official Bulletins</string>
    <string name="formal_news_details">Issued by the Central Bank of Syria</string>
    <string name="turkish_lira_details">Turkish lira against the dollar</string>
    <string name="lebanon_lira_details">lebanon lira against the dollar</string>
    <string name="world_currencies">World currencies</string>
    <string name="world_currencies_details">World currencies against the dollar</string>
    <string name="sites">Sites</string>
    <string name="sites_details">Last news on our sites</string>
    <string name="crops_pricing">Crops pricing</string>
    <string name="expectations">Expectations</string>
    <string name="expectations_details">Expect market changes</string>
    <string name="services">Services</string>
    <string name="services_details">Services department</string>
    <string name="currency_exchange">Currencies exchange</string>
    <string name="exchange_details">exchange for all currencies</string>
    <string name="control_panel">Control panel</string>
    <string name="dollar">Dollar</string>
    <string name="currencies">Currencies</string>
    <string name="gold">Gold</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="three_month">3 Months</string>
    <string name="year">Year</string>
    <string name="five_year">5 Years</string>
    <string name="day_range">Day range</string>
    <string name="previous_close">Previous close</string>
    <string name="open_price">Open price</string>
    <string name="my_opinion">My opinion</string>
    <string name="vote">Vote to show the results</string>
    <string name="poll">Poll</string>
    <string name="forum">Forum</string>
    <string name="cancel">Cancel</string>
    <string name="enter_value">Enter value</string>
    <string name="add_comment">Add comment</string>
    <string name="exchange">Exchange</string>
    <string name="euro">Euro</string>
    <string name="pound_sterling">Pound sterling</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="australian_dollar">Australian dollor</string>
    <string name="saudi_arabia_real">Saudi arabia real</string>
    <string name="emirates_dirham">United arab Emirates dirham</string>
    <string name="kuwaiti_dinar">Kuwaiti dinar</string>
    <string name="jordan_dinar">Jordan dinar</string>
    <string name="qatari_riyal">Qatari riyal</string>
    <string name="bahraini_dinar">Bahraini dinar</string>
    <string name="canadian_dollar">Canadian dollar</string>
    <string name="russian_ruble">Russian ruble</string>
    <string name="japanese_yen">Japanese yen</string>
    <string name="renminbi">Renminbi</string>
    <string name="algerian_dinar">Algerian dinar</string>
    <string name="argentine_peso">Argentine peso</string>
    <string name="swiss_franc">Swiss franc</string>
    <string name="indian_rupee">Indian rupee</string>
    <string name="moroccan_dirham">Moroccan dirham</string>
    <string name="iranian_rial">Iranian rial</string>
    <string name="libyan_dinar">Libyan dinar</string>
    <string name="egyptian_pound">Egyptian pound</string>
    <string name="tunisian_dinar">Tunisian dinar</string>
    <string name="zimbabwean_dollar">Zimbabwean dollar</string>
    <string name="updated_before_hour">"before %1$s hour"</string>
    <string name="updated_before_minute">before %1$s minute</string>
    <string name="updated_before_second">before %1$s second</string>
    <string name="dollar_in">"Dollar in "</string>
    <string name="screen_capture">Screen capture</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="update">Update</string>
    <string name="send_problem">problem send successfully, thank you</string>
    <string name="be_admin">you are Admin now</string>
    <string name="add_crops">Add new crops</string>
    <string name="add">Add</string>
    <string name="visible_to_users">Visible to users</string>
    <string name="send">Send</string>
    <string name="old_price">"The old price is "</string>
    <string name="update_successfully">Update it successfully</string>
    <string name="add_successfully">Crops added successfully</string>
    <string name="currency_name">Currency name</string>
    <string name="add_currency">Add new currency</string>
    <string name="choose_expert">اختيار المتميزين</string>
    <string name="link">Link</string>
    <string name="title">Title</string>
    <string name="edit_ad">Edit ads</string>
    <string name="add_ad">ADD ads</string>
    <string name="select_image_from">Select Image From:-</string>
    <string name="camera">Camera</string>
    <string name="album">Album</string>
    <string name="result">Result</string>
    <string name="select_city">Select city</string>
    <string name="enter_name">Enter name</string>
    <string name="details">Details</string>
    <string name="add_expectation">Add expectation</string>
    <string name="currency">Currency</string>
    <string name="no_activity">No App Available</string>
    <string name="hour">the hour</string>
    <string name="message">Message</string>
    <string name="admin_notifications">Admin notifications</string>
    <string name="close_app">Close App</string>
    <string name="please_allow_notification_from_your_phone">Please allow notification from your phone to check prices</string>
    <string name="please_allow_notification">please allow notification</string>
    <string name="activate_application">Activate Application</string>
    <string name="please_wait_a_moment">please wait a moment</string>
    TODO: Remove or change this placeholder text

</resources>