<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    tools:context=".dialog.admin.AdminDialog">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:padding="10dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/admin_notifications"
                android:textSize="16sp"
                android:textStyle="bold" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:hint="@string/title"
            android:layout_marginBottom="10dp"
            android:background="@drawable/s_check_not_selected"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:hint="@string/message"
            android:layout_marginBottom="10dp"
            android:background="@drawable/s_check_not_selected"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:hint="@string/link"
            android:layout_marginBottom="20dp"
            android:background="@drawable/s_check_not_selected"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/s_check_selected"
            android:text="@string/send"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>