<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    tools:context=".closeApp.CloseAppDialog">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:padding="10dp"
            android:layout_marginBottom="20dp">
            <ImageView
                android:id="@+id/delete"
                app:tint="@color/red"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_delete_24" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/close_app"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:hint="@string/title"
            android:layout_marginBottom="10dp"
            android:background="@drawable/s_check_not_selected"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:hint="@string/link"
            android:layout_marginBottom="20dp"
            android:background="@drawable/s_check_not_selected"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:checked="false"
            android:text="@string/activate_application"
            android:gravity="start"
            android:textOff="No"
            android:theme="@style/Color1SwitchStyle"
            android:textOn="Yes" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/s_check_selected"
            android:text="@string/send"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:indeterminateTint="@color/black"            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.cardview.widget.CardView>