<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    app:cardCornerRadius="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:padding="10dp"
            android:layout_marginBottom="20dp">
            <ImageView
                android:id="@+id/delete"
                app:tint="@color/red"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_delete_24" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/add_ad"

                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_logo"
                android:padding="20dp"
                android:scaleType="fitXY"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:hint="@string/title"
                android:layout_marginBottom="10dp"
                android:background="@drawable/s_check_not_selected"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:hint="@string/link"
                android:layout_marginBottom="20dp"
                android:background="@drawable/s_check_not_selected"/>

            <CheckBox
                android:id="@+id/visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/background"
                android:text="@string/visible_to_users"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/s_check_selected"
            android:text="@string/add"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_weight="2"
            android:indeterminate="true"
            android:visibility="visible"
            android:indeterminateTint="@color/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>